try new bucket policy

--- a/infrastructure/atlassian-s3bucket.yaml
+++ b/infrastructure/atlassian-s3bucket.yaml
@@ -31,22 +31,51 @@ Resources:
   # S3 Backup Data Encrypted Bucket
   ############################################################################
 
-  # S3Backup:
-  #   Type: "AWS::S3::Bucket"
-  #   Properties:
-  #     #BucketName: !Sub "${PMServerEnv}-jirabackup"
-  #     AccessControl: "Private"
-  #     VersioningConfiguration:
-  #       Status: "Enabled"
-  #     LifecycleConfiguration:
-  #       Rules:
-  #       - Id: "MyBackupArchive"
-  #         Status: "Enabled"
-  #         ExpirationInDays: '365' # Complete Disposal/Deletion of Data after 1 year
-  #         Transition:
-  #           TransitionInDays: '60' # Move Data from S3 bucket to Archive after 60 days.
-  #           StorageClass: !Ref "PMRegionAStorage"
-  #   DeletionPolicy: "Retain"
+  S3Backup:
+    Type: "AWS::S3::Bucket"
+    Properties:
+      #BucketName: !Sub "${PMServerEnv}-jirabackup"
+      AccessControl: "Private"
+      VersioningConfiguration:
+        Status: "Enabled"
+      LifecycleConfiguration:
+        Rules:
+        - Id: "MyBackupArchive"
+          Status: "Enabled"
+          ExpirationInDays: '365' # Complete Disposal/Deletion of Data after 1 year
+          Transition:
+            TransitionInDays: '60' # Move Data from S3 bucket to Archive after 60 days.
+            StorageClass: !Ref "PMRegionAStorage"
+    DeletionPolicy: "Retain"
+
+  BucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      PolicyDocument:
+        Version: '2008-10-17'
+        Id: Policy1376976828589
+        Statement:
+        - Sid: Stmt1376976826840
+          Action:
+          - s3:GetObject
+          - s3:PutObjectAcl
+          - s3:PutObject
+          - s3:DeleteObject
+          Effect: Allow
+          Resource:
+            Fn::Join:
+            - ''
+            - - 'arn:aws:s3:::'
+              - Ref: S3Backup
+              - "/*"
+          Principal:
+            AWS: "*"
+      Bucket:
+        Ref: S3Backup
+
+
+
+
 
   # S3BackupPolicy:
   #   Type: "AWS::S3::BucketPolicy"
@@ -60,9 +89,12 @@ Resources:
   #           AWS: "*"
   #         #Action: "s3:*"
   #         Action:
-  #           - s3:GetObject
-  #           - s3:PutObjectAcl
-  #         Resource: !Join ["", ["arn:aws:s3:::", !Ref "S3Backup", "/*"]]
+  #         - s3:GetObject
+  #         - s3:PutObjectAcl
+  #         Resource:
+  #         - arn:aws:s3:::my_secure_bucket
+  #         - arn:aws:s3:::my_secure_bucket/*
+  #         #Resource: !Join ["", ["arn:aws:s3:::", !Ref "S3Backup", "/*"]]
   #         Condition:
   #           StringNotEquals:
   #             s3:x-amz-server-side-encryption: "AES256"
