--- a/infrastructure/atlassian-s3bucket.yaml
+++ b/infrastructure/atlassian-s3bucket.yaml
@@ -70,6 +70,9 @@ Resources:
               - "/*"
           Principal:
             AWS: "*"
+          Condition:
+            StringNotEquals:
+              s3:x-amz-server-side-encryption: "AES256"
       Bucket:
         Ref: S3Backup
 
