--- a/infrastructure/atlassian-s3bucket.yaml
+++ b/infrastructure/atlassian-s3bucket.yaml
@@ -59,12 +59,23 @@ Resources:
           Principal:
             AWS: "*"
           Action:
-          # - "s3:*"
-          - "s3:GetObject"
-          - "s3:PutObjectAcl"
-          - "s3:PutObject"
-          - "s3:DeleteObject"
-          Resource: !Join ["", ["arn:aws:s3:::", !Ref "S3Backup", "/*"]]
+          - "s3:*"
+          #- "s3:GetObject"
+          #- "s3:PutObjectAcl"
+          #- "s3:PutObject"
+          #- "s3:DeleteObject"
+          # Resource: !Join ["", ["arn:aws:s3:::", !Ref "S3Backup", "/*"]]
+          Resource:
+            Fn::Join:
+            - ''
+            - - 'arn:aws:s3:::'
+              - Ref: S3Backup
+              - "/*"
+            Fn::Join:
+            - ''
+            - - 'arn:aws:s3:::'
+              - Ref: S3Backup
+              - "/"
           Condition:
             StringNotEquals:
               s3:x-amz-server-side-encryption: "AES256"
