Enable Jira with cron

--- a/infrastructure/atlassian-autoscaling-jira.yaml
+++ b/infrastructure/atlassian-autoscaling-jira.yaml
@@ -115,9 +115,9 @@ Resources:
           --name jira thinegan/debian-jira:v7.5.0
 
           # Backup Jira Data. Sync every 5 minutes
-          /usr/bin/crontab -l > /tmp/mycron
-          echo '# Cron Upload' >> /tmp/mycron
-          echo '*/5 * * * * /usr/bin/aws s3 sync --sse AES256 /home/jira/ s3://dev-mys3bucket-1fkq1gtzkx8uk-s3backup-n8w7q6mofqyo/ > /var/log/jirasync.log 2>&1' >> /tmp/mycron
+          #/usr/bin/crontab -l > /tmp/mycron
+          #echo '# Cron Upload' >> /tmp/mycron
+          echo '*/5 * * * * /usr/bin/aws s3 sync --sse AES256 /home/jira/ s3://dev-mys3bucket-1fkq1gtzkx8uk-s3backup-n8w7q6mofqyo/ > /var/log/jirasync.log 2>&1' > /tmp/mycron
           /usr/bin/crontab /tmp/mycron
           rm -rf /tmp/mycron
 
