fix Restore Jira Data if exist

--- a/infrastructure/atlassian-autoscaling-jira.yaml
+++ b/infrastructure/atlassian-autoscaling-jira.yaml
@@ -108,7 +108,7 @@ Resources:
           mkdir -p /home/jira/jira-data
           
           # Restore Jira Data if exist
-          /usr/bin/aws s3 sync --sse AES256 /home/jira/ s3://dev-mys3bucket-1fkq1gtzkx8uk-s3backup-n8w7q6mofqyo/ /home/jira/
+          /usr/bin/aws s3 sync --sse AES256 s3://dev-mys3bucket-1fkq1gtzkx8uk-s3backup-n8w7q6mofqyo/ /home/jira/
 
           chown -R jira:jira /home/jira/jira-data
           chmod -R +x /home/jira/jira-data
