Create RDS cname to endpoint

--- a/infrastructure/atlassian-rds.yaml
+++ b/infrastructure/atlassian-rds.yaml
@@ -137,8 +137,8 @@ Outputs:
     Description: "RDS Database Name"
     Value: !Ref "DatabaseName"
 
-  RdsDbURL:
-    Description: "RDS Database URL"
+  RdsDbEndpoint:
+    Description: "RDS Database Endpoint"
     Value: !GetAtt "Database.Endpoint.Address"
 
   DbUser:
