--- a/infrastructure/atlassian-route53.yaml
+++ b/infrastructure/atlassian-route53.yaml
@@ -12,6 +12,10 @@ Parameters:
     Description: "A reference to the Jira FQDN domain name"
     Type: "String"
 
+  PMDomainRds:
+    Description: "A reference to the RDS FQDN domain name"
+    Type: "String"
+
   PMHostedZone:
     Description: "A reference to the Hosted Zone"
     Type: "String"
@@ -20,6 +24,10 @@ Parameters:
     Description: "A reference to the Jira ELB DNS Name"
     Type: "String"
 
+  PMRdsDbEndpoint:
+    Description: "A reference to the RDS Url Endpoint"
+    Type: "String"
+  
   PMJiraLBHostedZoneId:
     Description: "A reference to the Jira ELB Hosted Zone ID"
     Type: "String"
@@ -39,9 +47,24 @@ Resources:
           HostedZoneId: !Ref "PMJiraLBHostedZoneId"
           DNSName: !Ref "PMJiraLBDNSName"
 
+  RdsRoute53:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      HostedZoneName: !Sub "${PMHostedZone}."
+      Comment: "Zone apex CNAME to RDS Endpoint."
+      RecordSets:
+      - Name: "${PMDomainRds}."
+        Type: 'CNAME'
+        TTL: '300'
+        ResourceRecords:
+        - !Sub "${PMRdsDbEndpoint}"
 
 Outputs:
 
   JiraRoute53:
     Description: "A reference to the Route53"
     Value: !Ref "Route53"
+
+  RdsRoute53:
+    Description: "A reference to the Route53"
+    Value: !Ref "RdsRoute53"
