--- a/infrastructure/atlassian-route53.yaml
+++ b/infrastructure/atlassian-route53.yaml
@@ -47,17 +47,16 @@ Resources:
           HostedZoneId: !Ref "PMJiraLBHostedZoneId"
           DNSName: !Ref "PMJiraLBDNSName"
 
-  # RdsRoute53:
-  #   Type: "AWS::Route53::RecordSetGroup"
-  #   Properties:
-  #     HostedZoneName: !Sub "${PMHostedZone}."
-  #     Comment: "Zone apex CNAME to RDS Endpoint."
-  #     RecordSets:
-  #     - Name: "${PMDomainRds}."
-  #       Type: 'CNAME'
-  #       TTL: '300'
-  #       ResourceRecords:
-  #       - !Sub "${PMRdsDbEndpoint}"
+  RdsRoute53:
+    Type: "AWS::Route53::RecordSet"
+    Properties:
+      HostedZoneName: !Sub "${PMHostedZone}."
+      Comment: "CNAME redirect custom name to RDS Endpoint."
+      Name: "${PMDomainRds}."
+      Type: 'CNAME'
+      TTL: '900'
+      ResourceRecords:
+      - !Sub "${PMRdsDbEndpoint}"
 
 Outputs:
 
