--- a/infrastructure/atlassian-route53.yaml
+++ b/infrastructure/atlassian-route53.yaml
@@ -52,24 +52,9 @@ Resources:
         ResourceRecords:
         - !Sub "${PMRdsDbEndpoint}"
 
-  # RdsRoute53:
-  #   Type: "AWS::Route53::RecordSetGroup"
-  #   Properties:
-  #     HostedZoneName: !Sub "${PMHostedZone}."
-  #     Comment: "CNAME redirect custom name to RDS Endpoint."
-  #     Name: "${PMDomainRds}."
-  #     Type: 'CNAME'
-  #     TTL: '900'
-  #     ResourceRecords:
-  #     - !Sub "${PMRdsDbEndpoint}"
-# 	RRSet with DNS name \044\173pmdomainrds\175. is not permitted in zone crytera.com.
-
 Outputs:
 
-  JiraRoute53:
+  Route53:
     Description: "A reference to the Route53"
     Value: !Ref "Route53"
 
-  # RdsRoute53:
-  #   Description: "A reference to the Route53"
-  #   Value: !Ref "RdsRoute53"
