--- a/infrastructure/atlassian-autoscaling-jira.yaml
+++ b/infrastructure/atlassian-autoscaling-jira.yaml
@@ -42,6 +42,10 @@ Parameters:
     Description: "A reference to the Jira Load Balancer"
     Type: "String"
 
+  PMS3Backup:
+    Description: "A reference to the S3 Bucket Backup"
+    Type: "String"
+
   PMIAMS3CWInstanceProfile:
     Description: "A reference to the IamInstanceProfile"
     Type: "String"
@@ -108,7 +112,7 @@ Resources:
           mkdir -p /home/jira/jira-data
           
           # Restore Jira Data if exist
-          /usr/bin/aws s3 sync --sse AES256 s3://dev-mys3bucket-1fkq1gtzkx8uk-s3backup-n8w7q6mofqyo/ /home/jira/
+          /usr/bin/aws s3 sync --sse AES256 s3://${PMS3Backup}/ /home/jira/
 
           chown -R jira:jira /home/jira/jira-data
           chmod -R +x /home/jira/jira-data
@@ -119,9 +123,8 @@ Resources:
           --name jira thinegan/debian-jira:latest
 
           # Backup Jira Data. Sync every 5 minutes
-          #/usr/bin/crontab -l > /tmp/mycron
           echo '# Cron Upload' > /tmp/mycron
-          echo '*/5 * * * * /usr/bin/aws s3 sync --sse AES256 /home/jira/ s3://dev-mys3bucket-1fkq1gtzkx8uk-s3backup-n8w7q6mofqyo/ > /var/log/jirasync.log 2>&1' >> /tmp/mycron
+          echo '*/5 * * * * /usr/bin/aws s3 sync --sse AES256 /home/jira/ s3://${PMS3Backup}/ > /var/log/jirasync.log 2>&1' >> /tmp/mycron
           /usr/bin/crontab /tmp/mycron
           rm -rf /tmp/mycron
 
