--- a/master.yaml
+++ b/master.yaml
@@ -218,7 +218,7 @@ Resources:
 
   MyJiraAutoScaling:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    # Condition: "UseProdEnv"
     DependsOn:
     - "MyJiraELB"
     Properties:
@@ -242,7 +242,7 @@ Resources:
 
   MyDNS:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    # Condition: "UseProdEnv"
     DependsOn:
     - "MyJiraAutoScaling"
     Properties:
