--- a/infrastructure/atlassian-autoscaling-jira.yaml
+++ b/infrastructure/atlassian-autoscaling-jira.yaml
@@ -125,6 +125,81 @@ Resources:
           }" > /etc/nginx/sites-available/${PMDomainJira}
 
           ln -sf /etc/nginx/sites-available/${PMDomainJira} /etc/nginx/sites-enabled/
+
+          echo "proxy_redirect		off;
+          client_body_buffer_size	256K;
+          client_max_body_size	12m;
+          proxy_connect_timeout	600;
+          proxy_send_timeout	600;
+          proxy_read_timeout	600;
+          proxy_buffer_size	128k;
+          proxy_buffers		4 256k;
+          proxy_busy_buffers_size	256k;" > /etc/nginx/proxy.conf
+
+          echo "user nginx;
+          worker_processes auto;
+          pid /var/run/nginx.pid;
+       
+          events {
+          worker_connections 1024;
+          multi_accept on;
+          use epoll;
+          }
+       
+          worker_rlimit_nofile 100000;
+
+          http {
+
+          ##
+          # Basic Settings 
+          ##
+          sendfile on;
+          tcp_nopush on;
+          tcp_nodelay on;
+          keepalive_timeout 65;
+          types_hash_max_size 2048;
+          server_tokens off;
+         
+          include /etc/nginx/mime.types;
+          default_type application/octet-stream;
+         
+          # set client body size to 32M #
+          client_max_body_size 32M;
+
+          ##
+          # Logging Settings
+          ##
+          access_log /var/log/nginx/access.log;
+          error_log /var/log/nginx/error.log;
+         
+          ##
+          # Gzip Settings
+          ##
+          gzip on;
+          gzip_disable "msie6";
+          gzip_static on;
+          gzip_vary on;
+          gzip_proxied any;
+          gzip_comp_level 9;
+          gzip_buffers 16 8k;
+          gzip_http_version 1.1;
+          gzip_types text/plain text/css text/csv application/json application/javascript application/x-javascript image/x-icon text/xml application/xml application/xml+rss text/javascript;
+       
+          ##
+          # open_file_cache optimization
+          ##
+          open_file_cache max=200000 inactive=50s;
+          open_file_cache_valid 60s;
+          open_file_cache_min_uses 2;
+          open_file_cache_errors on;
+       
+          ##
+          # Virtual Host Configs
+          ##
+          include /etc/nginx/conf.d/*.conf;
+          include /etc/nginx/sites-enabled/*;
+          }" > /etc/nginx/nginx.conf
+
           service nginx start
           chkconfig nginx on
 
