Disable Jira and increase IdleTimeout for ELB to 300s

--- a/infrastructure/atlassian-elb.yaml
+++ b/infrastructure/atlassian-elb.yaml
@@ -39,6 +39,8 @@ Resources:
   MyLoadBalancer:
     Type: "AWS::ElasticLoadBalancing::LoadBalancer"
     Properties:
+      ConnectionSettings:
+        IdleTimeout: '300'
       ConnectionDrainingPolicy:
         Enabled: "true"
         Timeout: "30"
