--- a/infrastructure/atlassian-autoscaling-jira.yaml
+++ b/infrastructure/atlassian-autoscaling-jira.yaml
@@ -216,6 +216,7 @@ Resources:
           service docker start
           docker run -d -p 8000:8080 \
           -v /home/jira/jira-data:/home/www/public_html/jira-data.server.com \
+          -e JIRASERVERNAME=${PMDomainJira} \
           --name jira thinegan/debian-jira:latest
 
           # Backup Jira Data. Sync every 5 minutes
