--- a/master.yaml
+++ b/master.yaml
@@ -218,7 +218,7 @@ Resources:
 
   MyJiraAutoScaling:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    # Condition: "UseProdEnv"
     DependsOn:
     - "MyJiraELB"
     Properties:
@@ -241,8 +241,8 @@ Resources:
         PMAutoscaleDes: !FindInMap ["EnvMap", !Ref "AWS::StackName", "AutoscaleDes"]
 
   MyDNS:
-    Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    # Type: "AWS::CloudFormation::Stack"
+    # Condition: "UseProdEnv"
     DependsOn:
     - "MyJiraAutoScaling"
     Properties:
