Added link server.xml config

--- a/infrastructure/atlassian-autoscaling-jira.yaml
+++ b/infrastructure/atlassian-autoscaling-jira.yaml
@@ -213,9 +213,12 @@ Resources:
           chown -R jira:jira /home/jira/jira-data
           chmod -R +x /home/jira/jira-data
 
+          sed -i 's/connectionTimeout="20000"/connectionTimeout="20000" scheme="https" proxyName="${PMDomainJira}" proxyPort="443"/g' conf/server.xml
+
           service docker start
           docker run -d -p 8000:8080 \
           -v /home/jira/jira-data:/home/www/public_html/jira-data.server.com \
+          -v $PWD/conf/server.xml:/home/www/public_html/jira-install.server.com/conf/server.xml \
           -e JIRASERVERNAME=${PMDomainJira} \
           --name jira thinegan/debian-jira:latest
 
