CNAME RDS on the fly after RDS endpoint1

--- a/infrastructure/atlassian-rds.yaml
+++ b/infrastructure/atlassian-rds.yaml
@@ -145,7 +145,8 @@ Resources:
         Type: 'CNAME'
         TTL: '900'
         ResourceRecords:
-        - !GetAtt "Database.Endpoint.Address"
+        - !Sub "${RdsDbEndpoint}"
+        # - !GetAtt "Database.Endpoint.Address"
 
 Outputs:
 
