CNAME RDS on the fly after RDS endpoint3

--- a/infrastructure/atlassian-rds.yaml
+++ b/infrastructure/atlassian-rds.yaml
@@ -145,7 +145,7 @@ Resources:
         Type: 'CNAME'
         TTL: '900'
         ResourceRecords:
-        - !ref "RdsDbEndpoint"
+        - !Ref "RdsDbEndpoint"
         # - !GetAtt "Database.Endpoint.Address"
 
 Outputs:
