CNAME RDS on the fly after RDS endpoint4

--- a/infrastructure/atlassian-rds.yaml
+++ b/infrastructure/atlassian-rds.yaml
@@ -145,8 +145,8 @@ Resources:
         Type: 'CNAME'
         TTL: '900'
         ResourceRecords:
-        - !Ref "RdsDbEndpoint"
-        # - !GetAtt "Database.Endpoint.Address"
+        # - !Ref "RdsDbEndpoint"
+        - !GetAtt "Database.Endpoint.Address"
 
 Outputs:
 
