--- a/infrastructure/atlassian-route53.yaml
+++ b/infrastructure/atlassian-route53.yaml
@@ -12,9 +12,9 @@ Parameters:
     Description: "A reference to the Jira FQDN domain name"
     Type: "String"
 
-  PMDomainRds:
-    Description: "A reference to the RDS FQDN domain name"
-    Type: "String"
+  # PMDomainRds:
+  #   Description: "A reference to the RDS FQDN domain name"
+  #   Type: "String"
 
   PMHostedZone:
     Description: "A reference to the Hosted Zone"
@@ -24,9 +24,9 @@ Parameters:
     Description: "A reference to the Jira ELB DNS Name"
     Type: "String"
 
-  PMRdsDbEndpoint:
-    Description: "A reference to the RDS Url Endpoint"
-    Type: "String"
+  # PMRdsDbEndpoint:
+  #   Description: "A reference to the RDS Url Endpoint"
+  #   Type: "String"
   
   PMJiraLBHostedZoneId:
     Description: "A reference to the Jira ELB Hosted Zone ID"
@@ -46,11 +46,11 @@ Resources:
         AliasTarget:
           HostedZoneId: !Ref "PMJiraLBHostedZoneId"
           DNSName: !Ref "PMJiraLBDNSName"
-      - Name: !Sub "${PMDomainRds}."
-        Type: 'CNAME'
-        TTL: '900'
-        ResourceRecords:
-        - !Sub "${PMRdsDbEndpoint}"
+      # - Name: !Sub "${PMDomainRds}."
+      #   Type: 'CNAME'
+      #   TTL: '900'
+      #   ResourceRecords:
+      #   - !Sub "${PMRdsDbEndpoint}"
 
 Outputs:
 
