--- a/master.yaml
+++ b/master.yaml
@@ -220,7 +220,7 @@ Resources:
 
   MyJiraAutoScaling:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    # Condition: "UseProdEnv"
     DependsOn:
     - "MyJiraELB"
     Properties:
